Fix alignement issue for users without avatars
Part of story #9892 notify group of people in addition to individuals

--- a/plugins/tracker/www/themes/default/css/style.scss
+++ b/plugins/tracker/www/themes/default/css/style.scss
@@ -3511,6 +3511,7 @@ td.tracker-global-notifications-checkbox-cell {
 }
 
 .tracker-notification-email-list-entry {
+    display: flex;
     white-space: nowrap;
 
     &:last-child > .tracker-notification-email-list-separator {
